k8s/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
