k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-metal
  namespace: nginx-ingress
spec:
  type: NodePort
  selector:
    app: nginx-ingress
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      nodePort: 30005
