k8s/pyapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pyapp
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl
    operation: Update
  name: pyapp
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: pyapp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
