k8s/ingress_resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-resource
spec:
  rules:
  - host: testapp
    http:
      paths:
      - backend:
          serviceName: pyapp
          servicePort: 80
