k8s/pyapp_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress
      containers:
      - image: nginx/nginx-ingress:edge
        imagePullPolicy: Always
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-resource
spec:
  rules:
  - host: testapp
    http:
      paths:
      - backend:
          serviceName: pyapp
          servicePort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pyapp
  name: pyapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pyapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pyapp
    spec:
      containers:
      - image: donped/pyapptest:v2
        name: pyapptest
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pyapp
  name: pyapp
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: pyapp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
